--- a/k8s/kustomization.yaml
+++ b/k8s/kustomization.yaml
@@ -1,13 +1,12 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
-namespace: bar-alod-ch
-resources:
-  - ingress.yaml
-
 commonLabels:
   app.kubernetes.io/name: bar-alod-ch
 
-bases:
-  - server
-  - varnish
+namespace: bar-alod-ch
+
+resources:
+  - ./server/
+  - ./varnish/
+  - ingress.yaml
