--- a/k8s/server/deployment.yaml
+++ b/k8s/server/deployment.yaml
@@ -10,18 +10,18 @@ spec:
         runAsUser: 65534
         runAsGroup: 65534
       containers:
-      - name: bar-alod-ch
-        image: bar-alod-ch
-        imagePullPolicy: IfNotPresent
-        ports:
-        - name: http
-          containerPort: 8080
-          protocol: TCP
-        livenessProbe:
-          httpGet:
-            path: /health
-            port: http
-        readinessProbe:
-          httpGet:
-            path: /health
-            port: http
+        - name: bar-alod-ch
+          image: docker.io/zazuko/bar-alod-ch
+          imagePullPolicy: IfNotPresent
+          ports:
+            - name: http
+              containerPort: 8080
+              protocol: TCP
+          livenessProbe:
+            httpGet:
+              path: /health
+              port: http
+          readinessProbe:
+            httpGet:
+              path: /health
+              port: http
