--- a/k8s/ingress.yaml
+++ b/k8s/ingress.yaml
@@ -3,10 +3,9 @@ kind: Ingress
 metadata:
   name: bar-alod-ch
   annotations:
-    external-dns.alpha.kubernetes.io/hostname: bar-alod-ch.zazukoians.org
+    external-dns.alpha.kubernetes.io/hostname: bar-alod-ch.zazuko.net
     kubernetes.io/tls-acme: "true"
-    traefik.ingress.kubernetes.io/redirect-regex: "^https://(.*)"
-    traefik.ingress.kubernetes.io/redirect-replacement: "http://$1"
+    nginx.ingress.kubernetes.io/ssl-redirect: "false"
 spec:
   tls:
     - secretName: bar-alod-ch-cert
