--- a/k8s/ingress.yaml
+++ b/k8s/ingress.yaml
@@ -1,4 +1,4 @@
-apiVersion: extensions/v1beta1
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: bar-alod-ch
@@ -11,11 +11,15 @@ spec:
     - secretName: bar-alod-ch-cert
       hosts:
         - bar.alod.ch
+
   rules:
     - host: bar.alod.ch
       http:
         paths:
           - path: /
+            pathType: Prefix
             backend:
-              serviceName: varnish
-              servicePort: 80
+              service:
+                name: varnish
+                port:
+                  number: 80
