k8s: configure affinity + 2 replicas

--- a/k8s/varnish/deployment.yaml
+++ b/k8s/varnish/deployment.yaml
@@ -3,6 +3,8 @@ kind: Deployment
 metadata:
   name: varnish
 spec:
+  replicas: 2
+
   template:
     spec:
       volumes:
@@ -27,3 +29,13 @@ spec:
             - name: http
               containerPort: 80
               protocol: TCP
+
+      affinity:
+        podAntiAffinity:
+          preferredDuringSchedulingIgnoredDuringExecution:
+            # This makes sure the pods are not all scheduled on the same node
+            - weight: 1
+              podAffinityTerm:
+                labelSelector:
+                  matchLabels: {}
+                topologyKey: "kubernetes.io/hostname"
