--- a/k8s/server/deployment.yaml
+++ b/k8s/server/deployment.yaml
@@ -3,7 +3,8 @@ kind: Deployment
 metadata:
   name: server
 spec:
-  replicas: 1
+  replicas: 2
+
   template:
     spec:
       securityContext:
@@ -19,9 +20,19 @@ spec:
               protocol: TCP
           livenessProbe:
             httpGet:
-              path: /health
+              path: /
               port: http
           readinessProbe:
             httpGet:
-              path: /health
+              path: /
               port: http
+
+      affinity:
+        podAntiAffinity:
+          preferredDuringSchedulingIgnoredDuringExecution:
+            # This makes sure the pods are not all scheduled on the same node
+            - weight: 1
+              podAffinityTerm:
+                labelSelector:
+                  matchLabels: {}
+                topologyKey: "kubernetes.io/hostname"
