k8s: set resource requests and limits

--- a/k8s/server/deployment.yaml
+++ b/k8s/server/deployment.yaml
@@ -27,6 +27,14 @@ spec:
               path: /
               port: http
 
+          resources:
+            requests:
+              cpu: 50m
+              memory: 80Mi
+            limits:
+              cpu: 300m
+              memory: 150Mi
+
       affinity:
         podAntiAffinity:
           preferredDuringSchedulingIgnoredDuringExecution:
