--- a/k8s/varnish/deployment.yaml
+++ b/k8s/varnish/deployment.yaml
@@ -30,6 +30,14 @@ spec:
               containerPort: 80
               protocol: TCP
 
+          resources:
+            requests:
+              cpu: 50m
+              memory: 50Mi
+            limits:
+              cpu: 150m
+              memory: 100Mi
+
       affinity:
         podAntiAffinity:
           preferredDuringSchedulingIgnoredDuringExecution:
