--- a/k8s/server/deployment.yaml
+++ b/k8s/server/deployment.yaml
@@ -12,7 +12,7 @@ spec:
         runAsGroup: 65534
       containers:
         - name: bar-alod-ch
-          image: docker.io/zazuko/bar-alod-ch
+          image: ghcr.io/zazuko/bar-alod-ch
           imagePullPolicy: IfNotPresent
           ports:
             - name: http
